# website-downloader

./: .flake8  .gitattributes  .gitignore  CHANGELOG.md  CLA.md  LICENSE  README.md  check_download.py  example-cookie.txt  pyproject.toml  requirements.txt  test_input.txt  website-downloader.py
.github/workflows/: auto-format.yml  lint.yml  publish.yml  python-app.yml  python-quality.yml  test.yml  website-test.yml
tests/: conftest.py  test_cli.py  test_crawler.py  test_paths.py  test_rewrite.py  test_urltools.py
website_downloader/: __init__.py  cache.py  cli.py  constants.py  crawler.py  exports.py  http.py  paths.py  progress.py  render.py  rewrite.py  sitemap.py  urltools.py
